tests/should_fail/duplicate_specs.stderr
error: duplicate extern specification for DefId(5:7879 ~ alloc[9f80]::vec::{impl#0}::new)
  --> duplicate_specs.rs:5:1
   |
5  | / extern_spec! {
6  | |     mod std {
7  | |         mod vec {
8  | |             impl<T> Vec<T> {
...  |
14 | | }
   | |_^
   |
   = note: this error originates in the macro `extern_spec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

